# project-unity-sphere-0e2c810d

./: .env  .env.example  .env.staging.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .replit  .vercelignore  7_layer_packets.json  ARCHITECTURE.md  App.tsx  AuthProvider.tsx  CONTRACTS_REGISTRY.json  CONTRACT_INDEX.md  Cargo.toml  DEEP_SEARCH_REGISTRY.md  DEVELOPER_GUIDE.md  DEVELOPER_PORTAL_V21.md  Dashboard.tsx  Dockerfile  HANDOVER_TO_PI_TEAM.md  Index.html  LIVE_MATRIX_REGISTRY.csv  Layout.tsx  MASTER_MANIFEST.md  MONOREPO_GUIDE.md  PIRC_GLOBAL_OMNI_REGISTRY.json  PIRC_STELLAR_BRIDGE_SYNC.md  PiRC-101_Sovereign_Monetary_Standard  PiRC-Master-System  PiRC100_Unified_System.html  PiRC100_Unified_System.html.  PiRCInheritanceTemplate.sol  README-PiRC-Architecture.md  README.md  REPOSITORY_STRUCTURE.md  ReadMe.md  SECURITY.md  SYSTEM_DATA_EARTH_WEALTH.json  SYSTEM_STATUS_FINAL.md  (+72 more)
.github/: Repository Root  dependabot.yml
.lovable/: plan.md
.well-known/: pi.toml
Organizing-the-Earth-s-resources-/: package-lock.json  package.json
PiRC-03/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-04/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-05/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-06/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-07/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-08/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-09/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-10/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-101/: README.md
PiRC-11/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-12/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-13/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-14/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-15/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-16/: 1-vision.md  2-core-design.md  ReadMe.md
PiRC-17/: 1-vision.md  2-core-design.md  ReadMe.md
contracts/soroban/: Cargo.toml  Reward Engine.rs  bootstrap.rs  dex_executor_a.rs  governance.rs  liquidity_bootstrapper.rs  liquidity_controller.rs  pi_token.rs  reward_engine.rs  rwa_verify.rs  treasury_vault.rs
contracts/soroban/src/: PiRC209VCVerifier.rs  ai_oracle.rs  amm.rs  catastrophic_recovery.rs  cbdc_integration.rs  circuit_breaker.rs  compliance_oracle.rs  custody.rs  dapp_abi.rs  dispute_resolution.rs  dynamic_rwa.rs  escrow_vault.rs  event_standard.rs  fee_abstraction.rs  flash_resistance.rs  fractionalizer.rs  governance.rs  grant_distribution.rs  illiquid_amm.rs  institutional_pools.rs  interest_rates.rs  ip_nft.rs  justice_engine.rs  kyc.rs  lending.rs  lib.rs  liquidation.rs  mobile_interface.rs  multi_chain_gov.rs  oracle.rs  pi_bridge.rs  pirc_config.rs  pol_routing.rs  por.rs  portability.rs  predictive_risk.rs  registry_v2.rs  registry_v3.rs  risk_engine.rs  rwa_token.rs  (+15 more)
contracts/soroban/src/defi/: amm_core.rs  vault_standard.rs
contracts/soroban/src/governance/: dao_core.rs
contracts/soroban/src/identity/: did_registry.rs
public/data/full-repo/PiRC_Master_Workspace/PiRC/contracts/soroban/: Cargo.toml  bootstrap.rs
public/data/full-repo/PiRC_Master_Workspace/PiRC/contracts/soroban/src/: fractionalizer.rs  pirc_config.rs  stealth_addresses.rs
super-pi/src/hyper_core/rust/: .gitignore  Cargo.toml  README.md
super-pi/src/hyper_core/rust/src/: absolute_final_ecosystem_seal_eternal_guardian.rs  ahi_ai_core.rs  autonomous_app_builder.rs  comprehensive_test_suite_validation.rs  developer_app_orchestrator.rs  ecosystem_isolation_shield.rs  ecosystem_readme_config.rs  eternal_quantum_security_anti_quantum_threat.rs  final_ecosystem_synthesis_ui_hub.rs  final_hyper_expansion_module.rs  final_pi_mainnet_supremacy_global_domination.rs  final_universal_integration_supremacy_capstone.rs  global_decentralized_ai_swarm_intelligence_hub.rs  global_pi_oracle_compliance_verifier.rs  hyper_ai_core.rs  hyper_ecosystem_monitor.rs  infinite_pi_ecosystem_expansion_universal_integration.rs  lib.rs  main.rs  master_control_final_integration_script.rs  pi_ecosystem_dashboard.rs  pi_mainnet_accelerator.rs  pi_mainnet_integration_real_time_synchronization.rs  pi_mainnet_launch_governance_protocol.rs  pi_network_decentralization_engine.rs  pi_network_decentralized_governance_council.rs  pi_network_eternal_decentralization_monitor.rs  pi_network_final_eternal_supremacy_capstone.rs  pi_network_full_decentralization_capstone.rs  pi_network_global_announcer.rs  pi_network_hyper_oracle.rs  pi_network_mainnet_trigger.rs  pi_network_quantum_security_network.rs  pi_network_super_advanced_evolution_engine.rs  pi_network_super_intelligence_core.rs  pi_network_ultimate_perfection_module.rs  pi_purity_accountability_enforcer.rs  pi_stablecoin_manager.rs  pi_transaction_engine.rs  quantum_ai_optimizer_predictive_maintenance.rs  (+8 more)
super-pi/src/hyper_core/rust/src/aa/: account_abstraction.rs
super-pi/src/hyper_core/rust/src/chronos/: chronos_oracle_agent.rs
super-pi/src/hyper_core/rust/src/intent/: intent_settlement_engine.rs
super-pi/src/hyper_core/rust/src/l2/: l2_network_bridge.rs
super-pi/src/hyper_core/rust/src/payout/: payout_automation_engine.rs
super-pi/src/hyper_core/rust/src/recursive_zk/: recursive_zk_aggregator.rs
super-pi/src/hyper_core/rust/src/sovereign/: sovereign_data_vault.rs
super-pi/src/hyper_core/rust/src/vrf/: vrf_oracle.rs
super-pi/src/hyper_core/rust/src/zk/: zk_rollup_engine.rs
super-pi/src/hyper_core/rust/tests/: test_super_pi_ecosystem.rs
(+2681 files in other folders)
