[package]
name        = "super-pi-ecosystem"
version     = "3.0.0"
edition     = "2021"
authors     = ["KOSASIH <kosasihg88@gmail.com>"]
description = "Super Pi — Most Advanced Production-Ready Pi Coin Ecosystem with NEXUS Prime Agent Orchestration"
license     = "MIT OR Apache-2.0"
keywords    = ["pi-network", "blockchain", "soroban", "defi", "stablecoin"]
categories  = ["cryptography::cryptocurrencies", "network-programming"]
repository  = "https://github.com/KOSASIH/super-pi"
readme      = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]
doctest    = false

[features]
default          = ["full"]
full             = ["zk", "quantum", "ai-consensus", "l2-bridge", "payout"]
zk               = ["ark-groth16", "ark-bls12-381", "ark-serialize"]
quantum          = ["kyber", "falcon-sign"]
ai-consensus     = ["candle-core", "candle-nn"]
l2-bridge        = ["ethers-core", "alloy-primitives"]
payout           = ["stellar-sdk"]

[dependencies]
# Soroban SDK (Stellar smart contract platform)
soroban-sdk     = { version = "21.0", features = ["alloc"] }

# Async runtime
tokio           = { version = "1.37", features = ["full", "tracing"] }

# Parallelism
rayon           = "1.10"

# Serialization
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
bincode         = "2.0"

# Cryptography
sha2            = "0.10"
sha3            = "0.10"
blake3          = "1.5"
ed25519-dalek   = { version = "2.1", features = ["serde"] }
k256            = { version = "0.13", features = ["ecdsa", "serde"] }
rand            = { version = "0.8", features = ["std"] }
zeroize         = { version = "1.7", features = ["derive"] }

# ZK Proofs (optional — feature-gated)
ark-groth16     = { version = "0.4", optional = true }
ark-bls12-381   = { version = "0.4", optional = true }
ark-serialize   = { version = "0.4", optional = true }

# Post-quantum crypto (optional)
kyber           = { version = "0.7", optional = true }
falcon-sign     = { version = "0.5", optional = true }

# ML/AI Consensus (optional)
candle-core     = { version = "0.5", optional = true }
candle-nn       = { version = "0.5", optional = true }

# L2 / EVM bridge (optional)
ethers-core     = { version = "2.0", optional = true }
alloy-primitives = { version = "0.7", optional = true }

# Stellar/Pi payout (optional)
stellar-sdk     = { version = "0.17", optional = true }

# Utilities
chrono          = { version = "0.4", features = ["serde"] }
uuid            = { version = "1.8", features = ["v4", "serde"] }
hex             = "0.4"
regex           = "1.10"
anyhow          = "1.0"
thiserror       = "1.0"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap         = "5.5"
parking_lot     = "0.12"
bytes           = "1.6"
url             = "2.5"
reqwest         = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.21"

[dev-dependencies]
soroban-sdk     = { version = "21.0", features = ["testutils"] }
tokio           = { version = "1.37", features = ["full", "test-util"] }
proptest        = "1.4"
criterion       = { version = "0.5", features = ["html_reports"] }
mockall         = "0.12"

[[bench]]
name    = "consensus_bench"
harness = false

[[bench]]
name    = "zk_bench"
harness = false

[profile.release]
opt-level       = 3
debug           = false
rpath           = false
lto             = "fat"
debug-assertions = false
codegen-units   = 1
panic           = "abort"
incremental     = false
overflow-checks = true
strip           = "debuginfo"

[profile.dev]
opt-level       = 0
debug           = true
rpath           = false
lto             = false
debug-assertions = true
codegen-units   = 16
panic           = "unwind"
incremental     = true
overflow-checks = true

[profile.test]
opt-level       = 1
debug           = true
overflow-checks = true

[workspace.metadata]
super-pi-version = "3.0.0"
nexus-prime      = "enabled"
agents           = ["NEXUS", "ARCHON", "LEX", "SINGULARITY", "OMEGA", "AESTHETE", "VULCAN", "SAPIENS"]
